# Traffic_Analysis

./: .gitignore  GITHUB_SETUP_GUIDE.md  LICENSE  PRODUCTION_READINESS_GUIDE.md  README.md  data.yaml  pyproject.toml  requirements.txt  setup.py  setup_and_train.sh  train_yolov8.py  training_requirements.txt
data/: output_speed_tracking.csv
docs/api/: README.md
src/: __init__.py  config.py
src/app/: main.py
src/common/: __init__.py  errors.py  logging_setup.py
src/detectors/: __init__.py  yolo_detector.py
src/eval/: benchmark.py
src/finetuning/: README.md  __init__.py  config.yaml  evaluate_model.py  live_streaming_processor.py  requirements.txt  setup_and_train.sh  test_classes.py  train.py  universal_video_processor.py  video_requirements.txt
src/finetuning/optimization/: README.md  accuracy_optimizer.py  production_config.yaml  realtime_optimization_report.json  realtime_optimizer.py  requirements.txt  run_optimizations.py  test_onnx_model.py
src/pipeline/: speed_tracker.py
src/roboflow_integration/: roboflow_annotate.py  roboflow_export.py
src/service/: __init__.py  fastapi_app.py
src/tracking/: byte_tracker.py
src/utils/: frame_extractor.py  geometry.py  video_io.py
